--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Vendas.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Vendas.form
@@ -174,16 +174,18 @@
                                                   <Component id="btnAdicionar" min="-2" pref="78" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
-                                          <EmptySpace min="-2" pref="121" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="txnome2" min="-2" pref="279" max="-2" attributes="0"/>
+                                              <Component id="txSubTotal" min="-2" pref="279" max="-2" attributes="0"/>
                                               <Component id="CodigoCliente4" min="-2" max="-2" attributes="0"/>
                                               <Component id="CodigoCliente7" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="txnome6" alignment="0" min="-2" pref="279" max="-2" attributes="0"/>
                                               <Component id="CodigoCliente9" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="txnome7" alignment="0" min="-2" pref="279" max="-2" attributes="0"/>
-                                              <Component id="CodigoCliente8" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="txnome5" min="-2" pref="279" max="-2" attributes="0"/>
+                                              <Component id="txTotal" min="-2" pref="279" max="-2" attributes="0"/>
+                                              <Group type="102" alignment="0" attributes="0">
+                                                  <Component id="txDesconto" min="-2" pref="279" max="-2" attributes="0"/>
+                                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                                  <Component id="btnAplicar" min="-2" pref="78" max="-2" attributes="0"/>
+                                              </Group>
                                           </Group>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
@@ -192,10 +194,9 @@
                                           <Component id="btnSalvar1" min="-2" pref="78" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="0" pref="62" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace max="32767" attributes="0"/>
+                                  <EmptySpace pref="1080" max="32767" attributes="0"/>
                                   <Component id="btnSalvar" min="-2" pref="78" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -252,22 +253,21 @@
                                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                                   <Component id="CodigoCliente4" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txnome2" min="-2" pref="30" max="-2" attributes="0"/>
+                                  <Component id="txSubTotal" min="-2" pref="30" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="CodigoCliente7" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txnome6" min="-2" pref="30" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="3" attributes="0">
+                                      <Component id="txDesconto" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                                      <Component id="btnAplicar" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                                  </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="CodigoCliente9" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txnome7" min="-2" pref="30" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="CodigoCliente8" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txnome5" min="-2" pref="30" max="-2" attributes="0"/>
+                                  <Component id="txTotal" min="-2" pref="30" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                           <Component id="btnSalvar" min="-2" pref="30" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -496,7 +496,7 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txnome2">
+                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txSubTotal">
                   <Properties>
                     <Property name="actionCommand" type="java.lang.String" value=""/>
                     <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -575,7 +575,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="1e" green="1e" red="1e" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Operacao:"/>
+                    <Property name="text" type="java.lang.String" value="SubTotal:"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="CodigoCliente5">
@@ -652,6 +652,9 @@
                           <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jtProdutosMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -686,21 +689,6 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txnome5">
-                  <Properties>
-                    <Property name="actionCommand" type="java.lang.String" value=""/>
-                    <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="cd" green="bf" red="83" type="rgb"/>
-                    </Property>
-                    <Property name="dicas" type="java.lang.String" value=""/>
-                    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[64, 30]"/>
-                    </Property>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[143, 30]"/>
-                    </Property>
-                  </Properties>
-                </Component>
                 <Component class="javax.swing.JLabel" name="CodigoCliente7">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -709,21 +697,10 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="1e" green="1e" red="1e" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Subtotal:"/>
+                    <Property name="text" type="java.lang.String" value="Desconto:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="CodigoCliente8">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="SansSerif" size="15" style="1"/>
-                    </Property>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="1e" green="1e" red="1e" type="rgb"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="Total:"/>
-                  </Properties>
-                </Component>
-                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txnome6">
+                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txDesconto">
                   <Properties>
                     <Property name="actionCommand" type="java.lang.String" value=""/>
                     <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -746,10 +723,10 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="1e" green="1e" red="1e" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Desconto:"/>
+                    <Property name="text" type="java.lang.String" value="Total:"/>
                   </Properties>
                 </Component>
-                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txnome7">
+                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txTotal">
                   <Properties>
                     <Property name="actionCommand" type="java.lang.String" value=""/>
                     <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -882,6 +859,26 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value=""/>
                   </Properties>
+                </Component>
+                <Component class="com.mycompany.autostockcar.view.componentes.Botao" name="btnAplicar">
+                  <Properties>
+                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ff" green="e1" red="a3" type="rgb"/>
+                    </Property>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="1e" green="1e" red="1e" type="rgb"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="Aplicar"/>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="SansSerif" size="15" style="1"/>
+                    </Property>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[62, 30]"/>
+                    </Property>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAplicarActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
