Adição de menu para gerenciar usuários

--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/componentes/Menu.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/componentes/Menu.form
@@ -70,7 +70,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="lbUsuario" min="-2" pref="128" max="-2" attributes="0"/>
+                  <Component id="labelUsuario" min="-2" pref="275" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -80,7 +80,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lbUsuario" alignment="0" max="32767" attributes="0"/>
+                      <Component id="labelUsuario" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -103,18 +103,18 @@
             <Property name="text" type="java.lang.String" value="Auto StockCar"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lbUsuario">
+        <Component class="javax.swing.JLabel" name="labelUsuario">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="SansSerif" size="15" style="1"/>
+              <Font name="SansSerif" size="8" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="1e" green="1e" red="1e" type="rgb"/>
             </Property>
-            <Property name="horizontalAlignment" type="int" value="4"/>
+            <Property name="horizontalAlignment" type="int" value="2"/>
           </Properties>
         </Component>
       </SubComponents>
