Alterações Vendas e mais algumas

--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/VendasF.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/VendasF.form
@@ -116,89 +116,84 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
+                          <EmptySpace pref="49" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jPanel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jScrollPane1" alignment="0" min="-2" pref="611" max="-2" attributes="0"/>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Component id="txcodigocliente1" min="-2" pref="79" max="-2" attributes="0"/>
-                                                      <Component id="CodigoCliente1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="txcodigocliente4" alignment="0" min="-2" pref="79" max="-2" attributes="0"/>
-                                                      <Component id="CodigoCliente2" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="txcodigocliente5" alignment="0" min="-2" pref="79" max="-2" attributes="0"/>
-                                                      <Component id="txIdProduto" min="-2" pref="79" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jPanel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jScrollPane1" alignment="0" min="-2" pref="611" max="-2" attributes="0"/>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="txcodigocliente1" min="-2" pref="79" max="-2" attributes="0"/>
+                                                  <Component id="CodigoCliente1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="txcodigocliente4" alignment="0" min="-2" pref="79" max="-2" attributes="0"/>
+                                                  <Component id="CodigoCliente2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="txcodigocliente5" alignment="0" min="-2" pref="79" max="-2" attributes="0"/>
+                                                  <Component id="txIdProduto" min="-2" pref="79" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Group type="102" attributes="0">
+                                                      <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
+                                                      <Component id="txnome3" min="-2" pref="279" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Group type="102" attributes="0">
-                                                          <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
-                                                          <Component id="txnome3" min="-2" pref="279" max="-2" attributes="0"/>
-                                                      </Group>
-                                                      <Group type="102" alignment="0" attributes="0">
-                                                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                          <Group type="103" groupAlignment="0" attributes="0">
-                                                              <Component id="NomeCliente" min="-2" max="-2" attributes="0"/>
-                                                              <Component id="CodigoCliente6" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                              <Component id="txnome4" alignment="0" min="-2" pref="279" max="-2" attributes="0"/>
-                                                          </Group>
-                                                      </Group>
-                                                      <Group type="102" alignment="0" attributes="0">
-                                                          <Group type="103" groupAlignment="0" attributes="0">
-                                                              <Group type="102" alignment="0" attributes="0">
-                                                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                                                  <Component id="cbxNomeProduto" min="-2" pref="279" max="-2" attributes="0"/>
-                                                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                                                  <Component id="btnSalvar2" min="-2" pref="78" max="-2" attributes="0"/>
-                                                              </Group>
-                                                              <Group type="102" alignment="0" attributes="0">
-                                                                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                                                                  <Component id="CodigoCliente5" min="-2" max="-2" attributes="0"/>
-                                                              </Group>
-                                                          </Group>
-                                                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                          <Group type="103" groupAlignment="0" attributes="0">
-                                                              <Component id="jLabel1" min="-2" pref="37" max="-2" attributes="0"/>
-                                                              <Component id="txQuantidade" min="-2" pref="79" max="-2" attributes="0"/>
-                                                          </Group>
-                                                      </Group>
-                                                      <Group type="102" alignment="1" attributes="0">
-                                                          <EmptySpace max="-2" attributes="0"/>
-                                                          <Component id="cbxNomeCliente" min="-2" pref="279" max="-2" attributes="0"/>
-                                                          <EmptySpace min="-2" pref="194" max="-2" attributes="0"/>
+                                                  <Group type="102" alignment="0" attributes="0">
+                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" attributes="0">
+                                                          <Component id="NomeCliente" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="CodigoCliente6" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="txnome4" alignment="0" min="-2" pref="279" max="-2" attributes="0"/>
                                                       </Group>
                                                   </Group>
-                                                  <Component id="btnAdicionar" min="-2" pref="78" max="-2" attributes="0"/>
+                                                  <Group type="102" alignment="0" attributes="0">
+                                                      <Group type="103" groupAlignment="0" attributes="0">
+                                                          <Group type="102" alignment="0" attributes="0">
+                                                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                                              <Component id="cbxNomeProduto" min="-2" pref="279" max="-2" attributes="0"/>
+                                                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                                              <Component id="btnSalvar2" min="-2" pref="78" max="-2" attributes="0"/>
+                                                          </Group>
+                                                          <Group type="102" alignment="0" attributes="0">
+                                                              <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
+                                                              <Component id="CodigoCliente5" min="-2" max="-2" attributes="0"/>
+                                                          </Group>
+                                                      </Group>
+                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" attributes="0">
+                                                          <Component id="jLabel1" min="-2" pref="37" max="-2" attributes="0"/>
+                                                          <Component id="txQuantidade" min="-2" pref="79" max="-2" attributes="0"/>
+                                                      </Group>
+                                                  </Group>
+                                                  <Group type="102" alignment="1" attributes="0">
+                                                      <EmptySpace max="-2" attributes="0"/>
+                                                      <Component id="cbxNomeCliente" min="-2" pref="279" max="-2" attributes="0"/>
+                                                      <EmptySpace min="-2" pref="194" max="-2" attributes="0"/>
+                                                  </Group>
                                               </Group>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="txSubTotal" min="-2" pref="279" max="-2" attributes="0"/>
-                                              <Component id="CodigoCliente4" min="-2" max="-2" attributes="0"/>
-                                              <Component id="CodigoCliente7" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="CodigoCliente9" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="txTotal" min="-2" pref="279" max="-2" attributes="0"/>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="txDesconto" min="-2" pref="279" max="-2" attributes="0"/>
-                                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                                  <Component id="btnAplicar" min="-2" pref="78" max="-2" attributes="0"/>
-                                              </Group>
+                                              <Component id="btnAdicionar" min="-2" pref="78" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="CodigoCliente" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="315" max="-2" attributes="0"/>
-                                          <Component id="btnSalvar1" min="-2" pref="78" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="txSubTotal" min="-2" pref="279" max="-2" attributes="0"/>
+                                          <Component id="CodigoCliente4" min="-2" max="-2" attributes="0"/>
+                                          <Component id="CodigoCliente7" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="CodigoCliente9" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="txTotal" min="-2" pref="279" max="-2" attributes="0"/>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="txDesconto" min="-2" pref="279" max="-2" attributes="0"/>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Component id="btnAplicar" min="-2" pref="78" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                   </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="CodigoCliente" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="315" max="-2" attributes="0"/>
+                                      <Component id="btnSalvar1" min="-2" pref="78" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace pref="1080" max="32767" attributes="0"/>
-                                  <Component id="btnSalvar" min="-2" pref="78" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="btnSalvar" alignment="1" min="-2" pref="78" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
