--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/VendasF.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/VendasF.form
@@ -116,7 +116,7 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace pref="49" max="32767" attributes="0"/>
+                          <EmptySpace pref="45" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jPanel3" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -125,7 +125,7 @@
                                           <Component id="jScrollPane1" alignment="0" min="-2" pref="611" max="-2" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="txcodigocliente1" min="-2" pref="79" max="-2" attributes="0"/>
+                                                  <Component id="txIdCliente" min="-2" pref="79" max="-2" attributes="0"/>
                                                   <Component id="CodigoCliente1" alignment="0" min="-2" max="-2" attributes="0"/>
                                                   <Component id="txcodigocliente4" alignment="0" min="-2" pref="79" max="-2" attributes="0"/>
                                                   <Component id="CodigoCliente2" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -209,7 +209,7 @@
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="txcodigocliente1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="txIdCliente" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="btnSalvar1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="cbxNomeCliente" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
@@ -463,7 +463,7 @@
                     <Property name="text" type="java.lang.String" value="Nome:"/>
                   </Properties>
                 </Component>
-                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txcodigocliente1">
+                <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txIdCliente">
                   <Properties>
                     <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="cd" green="bf" red="83" type="rgb"/>
