--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Cadastrop.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Cadastrop.form
@@ -134,10 +134,7 @@
                                                       <Component id="jLabel8" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
                                                       <Component id="txvalorcusto" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
                                                       <Component id="ValorCusto" alignment="0" min="-2" pref="117" max="-2" attributes="0"/>
-                                                      <Group type="102" alignment="0" attributes="0">
-                                                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                                                          <Component id="ID" min="-2" pref="37" max="-2" attributes="0"/>
-                                                      </Group>
+                                                      <Component id="ID" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
                                                   </Group>
                                                   <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
                                               </Group>
