--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Categoria.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Categoria.form
@@ -97,7 +97,7 @@
                               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="CbxNome" max="32767" attributes="0"/>
+                                  <Component id="TxtNome" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -118,7 +118,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="TxtCodigo" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="CbxNome" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TxtNome" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
@@ -343,7 +343,22 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtNovo1ActionPerformed"/>
               </Events>
             </Component>
-            <Component class="com.mycompany.autostockcar.view.componentes.ComboBoxPersonalizado" name="CbxNome">
+            <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="TxtNome">
+              <Properties>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="0" green="0" red="0" type="rgb"/>
+                </Property>
+                <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="e0" green="ca" red="6e" type="rgb"/>
+                </Property>
+                <Property name="dicas" type="java.lang.String" value="Nome Categotia"/>
+                <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="0" green="0" red="0" type="rgb"/>
+                </Property>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[180, 30]"/>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
