--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/componentes/Menu.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/componentes/Menu.form
@@ -24,7 +24,7 @@
           <Component id="jSeparator1" max="32767" attributes="0"/>
           <Component id="jPanel1" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="295" max="32767" attributes="0"/>
+              <EmptySpace pref="294" max="32767" attributes="0"/>
               <Component id="btnMenuDashboard" min="-2" pref="100" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnMenuProdutos" min="-2" pref="100" max="-2" attributes="0"/>
@@ -34,7 +34,9 @@
               <Component id="btnMenuConsulta" min="-2" pref="100" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnMenuClientes" min="-2" pref="100" max="-2" attributes="0"/>
-              <EmptySpace pref="295" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="btnMenuGestao" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="240" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -51,6 +53,7 @@
                   <Component id="btnMenuProdutos" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="btnMenuConsulta" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="btnMenuClientes" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="btnMenuGestao" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
           </Group>
@@ -217,6 +220,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMenuConsultaActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="com.mycompany.autostockcar.view.componentes.Botao" name="btnMenuGestao">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="botao1"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMenuGestaoActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
